--- a/keras-object-detection.yml
+++ b/keras-object-detection.yml
@@ -2,20 +2,23 @@ name: keras-object-detection
 channels:
 - menpo
 - anaconda
+- conda-forge
 - defaults
 dependencies:
 - cudatoolkit=7.5=2
 - cudnn=5.1=0
 - h5py=2.7.1=py36h3585f63_0
 - hdf5=1.10.1=h9caa474_1
-- keras-gpu=2.1.3=py36_0
 - libprotobuf=3.4.1=h5b8497f_0
 - protobuf=3.4.1=py36h306e679_0
 - pyyaml=3.12=py36hafb9ca4_1
 - scipy=1.0.0=py36hbf646e7_0
-- tensorflow-gpu=1.0.1=py36_4
 - yaml=0.1.7=had09818_2
-- bleach=2.1.2=py36_0
+- bleach=1.5.0=py36_0
+- html5lib=0.9999999=py36_0
+- tensorboard=0.4.0rc3=py36_2
+- tensorflow=1.4.0=py36_0
+- werkzeug=0.14.1=py_0
 - ca-certificates=2017.08.26=h1d4fec5_0
 - certifi=2018.1.18=py36_0
 - cycler=0.10.0=py36h93f1223_0
@@ -29,7 +32,6 @@ dependencies:
 - gmp=6.1.2=h6c8ec71_1
 - gst-plugins-base=1.12.4=h33fb286_0
 - gstreamer=1.12.4=hb53b477_0
-- html5lib=1.0.1=py36h2f9c1c0_0
 - icu=58.2=h9c2bf20_1
 - intel-openmp=2018.0.0=hc7b2577_8
 - ipykernel=4.8.0=py36_0
@@ -44,6 +46,7 @@ dependencies:
 - jupyter_client=5.2.2=py36_0
 - jupyter_console=5.2.0=py36he59e554_1
 - jupyter_core=4.4.0=py36h7c827e3_0
+- keras=2.1.3=py36_0
 - libedit=3.1=heed3624_0
 - libffi=3.2.1=hd88cf55_4
 - libgcc-ng=7.2.0=h7cc24e2_2
@@ -54,6 +57,7 @@ dependencies:
 - libtiff=4.0.9=h28f6b97_0
 - libxcb=1.12=hcd93eb1_4
 - libxml2=2.9.7=h26e45fe_0
+- markdown=2.6.9=py36_0
 - markupsafe=1.0=py36hd9260cd_1
 - matplotlib=2.1.2=py36h0e671d2_0
 - mistune=0.8.3=py36_0
@@ -110,8 +114,7 @@ dependencies:
   - jupyter-client==5.2.2
   - jupyter-console==5.2.0
   - jupyter-core==4.4.0
-  - keras==2.1.3
   - prompt-toolkit==1.0.15
-  - tensorflow==1.0.1
+  - tensorflow-tensorboard==0.4.0rc3
 prefix: /home/nitin/miniconda3/envs/keras-object-detection
 
