--- a/keras-object-detection.yml
+++ b/keras-object-detection.yml
@@ -1,23 +1,25 @@
 name: keras-object-detection
 channels:
 - menpo
-- anaconda
 - conda-forge
+- anaconda
 - defaults
 dependencies:
-- cudatoolkit=7.5=2
-- cudnn=5.1=0
+- cudatoolkit=8.0=3
+- cudnn=7.0.5=cuda8.0_0
 - h5py=2.7.1=py36h3585f63_0
 - hdf5=1.10.1=h9caa474_1
+- keras-gpu=2.1.3=py36_0
 - libprotobuf=3.4.1=h5b8497f_0
 - protobuf=3.4.1=py36h306e679_0
 - pyyaml=3.12=py36hafb9ca4_1
 - scipy=1.0.0=py36hbf646e7_0
+- tensorflow-gpu=1.4.1=0
+- tensorflow-gpu-base=1.4.1=py36h01caf0a_0
+- tensorflow-tensorboard=0.1.5=py36_0
 - yaml=0.1.7=had09818_2
 - bleach=1.5.0=py36_0
 - html5lib=0.9999999=py36_0
-- tensorboard=0.4.0rc3=py36_2
-- tensorflow=1.4.0=py36_0
 - werkzeug=0.14.1=py_0
 - ca-certificates=2017.08.26=h1d4fec5_0
 - certifi=2018.1.18=py36_0
@@ -46,7 +48,6 @@ dependencies:
 - jupyter_client=5.2.2=py36_0
 - jupyter_console=5.2.0=py36he59e554_1
 - jupyter_core=4.4.0=py36h7c827e3_0
-- keras=2.1.3=py36_0
 - libedit=3.1=heed3624_0
 - libffi=3.2.1=hd88cf55_4
 - libgcc-ng=7.2.0=h7cc24e2_2
@@ -114,7 +115,8 @@ dependencies:
   - jupyter-client==5.2.2
   - jupyter-console==5.2.0
   - jupyter-core==4.4.0
+  - keras==2.1.3
   - prompt-toolkit==1.0.15
-  - tensorflow-tensorboard==0.4.0rc3
+  - tensorflow==1.4.1
 prefix: /home/nitin/miniconda3/envs/keras-object-detection
 
